--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
   "devDependencies": {
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "autoprefixer": "^10.2.6",
+    "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.3.2",
+    "postcss-loader": "^6.1.1",
+    "style-loader": "^3.0.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "webpack": "^5.43.0",
