--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode=development"
+    "start": "webpack serve --mode=development",
+    "build": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kieran-allen/poke-shake.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Kieran Allen",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/kieran-allen/poke-shake/issues"
   },
@@ -26,7 +27,9 @@
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.2.6",
     "css-loader": "^5.2.6",
+    "cssnano": "^5.0.6",
     "html-webpack-plugin": "^5.3.2",
+    "postcss": "^8.3.5",
     "postcss-loader": "^6.1.1",
     "style-loader": "^3.0.0",
     "ts-loader": "^9.2.3",
