--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --mode=development",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,15 +24,20 @@
     "react-query": "^3.18.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/jest": "^26.0.24",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.2.6",
     "css-loader": "^5.2.6",
     "cssnano": "^5.0.6",
     "html-webpack-plugin": "^5.3.2",
+    "jest": "^27.0.6",
     "postcss": "^8.3.5",
     "postcss-loader": "^6.1.1",
     "style-loader": "^3.0.0",
+    "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "webpack": "^5.43.0",
