--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/react-hooks": "^7.0.1",
     "@types/jest": "^26.0.24",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
@@ -34,6 +35,7 @@
     "cssnano": "^5.0.6",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
+    "jest-localstorage-mock": "^2.4.14",
     "postcss": "^8.3.5",
     "postcss-loader": "^6.1.1",
     "style-loader": "^3.0.0",
